--- a/src/main/resources/templates/layout/nav.html
+++ b/src/main/resources/templates/layout/nav.html
@@ -9,8 +9,14 @@
     <div th:fragment="nav">
         <nav>
             <ul>
-                <li>회원목록</li>
-                <li>게시판목록</li>
+                <li>
+                    <a href="/">첫 화면</a></li>
+                <li>
+                    <a href="/member">멤버</a>
+                </li>
+                <li>
+                    <a href="#">게시판목록</a>
+                </li>
             </ul>
         </nav>
     </div>
