3 - 리다이렉션과 리스트에 넣기 처리

--- a/src/main/resources/templates/member/member_create.html
+++ b/src/main/resources/templates/member/member_create.html
@@ -17,6 +17,14 @@
         <input type="submit">
     </form>
 
+    <hr>
+
+
+    <div th:each="m : ${list}">
+        이름 : <span th:text="${m.username}"></span> <br>
+        비밀번호 : <span th:text="${m.password}"></span>
+    </div>
+
 </div>
 
 </body>
