--- a/src/main/resources/templates/member/member_create.html
+++ b/src/main/resources/templates/member/member_create.html
@@ -24,11 +24,16 @@
 
     <hr>
 
+    <th:block th:if="${pageinfo != null}">
+        <div th:each="member : ${pageinfo.content}">
+            이름 : <span th:text="${member.username}"></span> <br>
+            비밀번호 : <span th:text="${member.password}"></span>
+        </div>
 
-    <div th:each="m : ${list}">
-        이름 : <span th:text="${m.username}"></span> <br>
-        비밀번호 : <span th:text="${m.password}"></span>
-    </div>
+        <hr>
+        <ul th:replace="~{common/pagination :: pagination('/member')}"></ul>
+    </th:block>
+    
 
 </div>
 
