--- a/src/main/resources/templates/member/member_create.html
+++ b/src/main/resources/templates/member/member_create.html
@@ -6,6 +6,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .active{color:red;}
+    </style>
 </head>
 <body>
 
